// ============================================================
//  ER DIAGRAM — Online Retail Sales Database
//  Paste this code at: https://dbdiagram.io
//  Schema normalized to 3NF
// ============================================================

// ── REFERENCE / LOOKUP TABLES ──────────────────────────────

Table countries {
  country_id    int           [pk, increment]
  country_name  varchar(100)  [not null, unique]
  country_code  char(2)       [not null, unique, note: "ISO 3166-1 alpha-2"]
}

Table states {
  state_id      int           [pk, increment]
  state_name    varchar(100)  [not null]
  country_id    int           [not null, ref: > countries.country_id]

  indexes {
    (state_name, country_id) [unique]
  }
}

Table cities {
  city_id       int           [pk, increment]
  city_name     varchar(100)  [not null]
  state_id      int           [not null, ref: > states.state_id]
  pincode       varchar(20)

  indexes {
    (city_name, state_id) [unique]
  }
}

// ── CUSTOMERS ──────────────────────────────────────────────

Table customers {
  customer_id     int           [pk, increment]
  first_name      varchar(60)   [not null]
  last_name       varchar(60)   [not null]
  email           varchar(150)  [not null, unique]
  phone           varchar(20)
  gender          char(1)       [note: "M / F / O"]
  date_of_birth   date
  loyalty_points  int           [default: 0]
  is_active       boolean       [default: true]
  created_at      timestamp     [default: `now()`]
  updated_at      timestamp     [default: `now()`]
}

Table addresses {
  address_id      int           [pk, increment]
  customer_id     int           [not null, ref: > customers.customer_id]
  address_line1   varchar(200)  [not null]
  address_line2   varchar(200)
  city_id         int           [not null, ref: > cities.city_id]
  address_type    varchar(20)   [default: "HOME", note: "HOME / WORK / OTHER"]
  is_default      boolean       [default: false]
}

// ── PRODUCT CATALOG ────────────────────────────────────────

Table categories {
  category_id     int           [pk, increment]
  category_name   varchar(100)  [not null, unique]
  parent_id       int           [ref: > categories.category_id, note: "Self-referencing for sub-categories"]
  description     text
}

Table suppliers {
  supplier_id     int           [pk, increment]
  supplier_name   varchar(150)  [not null]
  contact_email   varchar(150)
  contact_phone   varchar(20)
  city_id         int           [ref: > cities.city_id]
  is_active       boolean       [default: true]
  created_at      timestamp     [default: `now()`]
}

Table products {
  product_id      int           [pk, increment]
  product_name    varchar(200)  [not null]
  sku             varchar(50)   [not null, unique, note: "Stock Keeping Unit"]
  category_id     int           [not null, ref: > categories.category_id]
  supplier_id     int           [ref: > suppliers.supplier_id]
  unit_price      decimal(12,2) [not null]
  cost_price      decimal(12,2)
  stock_quantity  int           [default: 0]
  reorder_level   int           [default: 10]
  discount_pct    decimal(5,2)  [default: 0]
  is_active       boolean       [default: true]
  created_at      timestamp     [default: `now()`]
  updated_at      timestamp     [default: `now()`]
}

// ── ORDERS ─────────────────────────────────────────────────

Table orders {
  order_id            int           [pk, increment]
  customer_id         int           [not null, ref: > customers.customer_id]
  shipping_address_id int           [ref: > addresses.address_id]
  order_date          timestamp     [default: `now()`]
  expected_delivery   date
  delivered_date      date
  order_status        varchar(20)   [default: "PENDING", note: "PENDING / CONFIRMED / SHIPPED / DELIVERED / CANCELLED / RETURNED"]
  shipping_fee        decimal(10,2) [default: 0]
  coupon_code         varchar(30)
  discount_amount     decimal(10,2) [default: 0]
  notes               text
  created_at          timestamp     [default: `now()`]
}

Table order_items {
  order_item_id   int           [pk, increment]
  order_id        int           [not null, ref: > orders.order_id]
  product_id      int           [not null, ref: > products.product_id]
  quantity        int           [not null]
  unit_price      decimal(12,2) [not null, note: "Price at time of order"]
  discount_pct    decimal(5,2)  [default: 0]

  indexes {
    (order_id, product_id) [unique]
  }
}

// ── PAYMENTS ───────────────────────────────────────────────

Table payments {
  payment_id      int           [pk, increment]
  order_id        int           [not null, ref: > orders.order_id]
  payment_date    timestamp     [default: `now()`]
  amount          decimal(12,2) [not null]
  payment_method  varchar(30)   [note: "CREDIT_CARD / DEBIT_CARD / UPI / NET_BANKING / COD / WALLET"]
  payment_status  varchar(20)   [default: "PENDING", note: "PENDING / SUCCESS / FAILED / REFUNDED"]
  transaction_ref varchar(100)  [unique]
}

// ── REVIEWS ────────────────────────────────────────────────

Table product_reviews {
  review_id       int           [pk, increment]
  product_id      int           [not null, ref: > products.product_id]
  customer_id     int           [not null, ref: > customers.customer_id]
  order_id        int           [ref: > orders.order_id]
  rating          smallint      [not null, note: "1 to 5"]
  review_text     text
  reviewed_at     timestamp     [default: `now()`]

  indexes {
    (product_id, customer_id, order_id) [unique]
  }
}

// ── NOTES ──────────────────────────────────────────────────
// Normalization level: 3NF
// - 1NF: All columns atomic, no repeating groups
// - 2NF: No partial dependencies (all non-key attrs depend on full PK)
// - 3NF: No transitive dependencies (location split into countries/states/cities)
//        unit_price stored in order_items to avoid transitive dependency on products
//
// Key design decisions:
// - categories is self-referencing (parent_id) to support nested sub-categories
// - order_items stores unit_price at time of purchase (snapshot pricing)
// - addresses separated from customers (one customer, many addresses)
// - payments is 1:1 with orders in this schema (can be extended to partial payments)
